--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <img src="assets/images/avatar-jessica.jpeg" />
+      <img src="assets/images/avatar-jessica.jpeg" alt="avatar-jessica" />
       <div class="name">Jessica Randall</div>
       <div class="townAndCountry">London, United Kingdom</div>
       <div class="work">"Front-end developer and avid reader."</div>
@@ -43,7 +49,11 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">ban tit</a>.
+      >. Coded by
+      <a
+        href="https://github.com/ban-tit/02-challenge-newbie-social-links-profile-main"
+        >ban tit</a
+      >.
     </div>
   </body>
 </html>
